--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "serenity-weather-bot"
+name = "lumenlimitless-serenity-weather-bot"
 version = "0.1.0"
 edition = "2021"
 
@@ -7,7 +7,12 @@ edition = "2021"
 anyhow = "1.0.66"
 shuttle-serenity = "0.24.0"
 shuttle-runtime = "0.24.0"
-serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
+serenity = { version = "0.11.5", default-features = false, features = [
+    "client",
+    "gateway",
+    "rustls_backend",
+    "model",
+] }
 shuttle-secrets = "0.24.0"
 tokio = "1.26.0"
 tracing = "0.1.37"
