--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,4 @@ poise = "0.5.5"
 shuttle-poise = "0.24.0"
 serde = "1.0.183"
 reqwest = { version = "0.11.18", features = ["json"] }
+thiserror = "1.0.47"
